<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:summary="@string/pref_general"
        android:title="@string/pref_general" >
        <CheckBoxPreference
            android:key="@string/pref_activate_support"
            android:title="@string/activate_support" />

        <ListPreference
            android:entries="@array/system_integration_options"
            android:entryValues="@array/system_integration_options"
            android:key="system_integration"
            android:title="@string/pref_system_integration" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/integration_time"
        android:title="@string/integration_time" >
        <de.hsrm.audioapi.ui.widgets.TimePreference
            android:key="@string/integration_time_from"
            android:title="@string/integration_time_from" />
        <de.hsrm.audioapi.ui.widgets.TimePreference
            android:key="@string/integration_time_to"
            android:title="@string/integration_time_to" />
    </PreferenceCategory>

</PreferenceScreen>